# Dioxus-Adapter

./: README.md
dioxus/: Cargo.toml
dioxus/assets/: main.css
dioxus/src/: main.rs
dioxus/src/views/: dashboard_disconnected.rs
sycamore/: Cargo.toml  README.md
sycamore-adapter/: .gitignore
sycamore-adapter/src/: lib.rs
sycamore/src/: footer.rs  header.rs  homepage.rs  lib.rs
yew/: .gitignore  Cargo.toml
yew/resources/styles/: main.css
yew/src/: app.rs  lib.rs
yew/src/components/: header.rs
