[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallet-adapter = "1.0.0-beta.1"
dioxus = { version = "0.5.6", features = ["web"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.7"
# Debug
dioxus-logger = "0.5.1"
web-sys = { version = "0.3.74", features = [
    "Window",
    "Document",
    "Event",
    "EventTarget",
    "Element",
    "HtmlElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "PointerEvent",
    "Clipboard",
    "Navigator",
] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
