[package]
name = "{{project-name}}"
version = "0.2.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wallet-adapter = "1.0.4-beta"
sycamore = { version = "0.9.1", features = ["futures", "suspense"] }
sycamore-router = "0.9.1"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.7"
web-sys = { version = "0.3.76", features = [
    "Window",
    "Document",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "Element",
    "HtmlElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "PointerEvent",
    "Clipboard",
    "Navigator",
    "console",
] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
