[package]
name = "{{project-name}}"
version = "0.2.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wallet-adapter = "1.0.4-beta"
yew = { version = "0.21.0", features = ["csr"] }
solana-sdk = "2.1.4"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"
jzon = "0.12.5"
yew-router = "0.18.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.7"
web-sys = { version = "0.3.76", features = [
    "Window",
    "Document",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "Element",
    "HtmlElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "PointerEvent",
    "Clipboard",
    "Navigator",
    "console",
] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
